# FaceIdentify

./: CMakeLists.txt  README.md  face_api.cpp  samplecode.cpp  test_api.cpp
inc/: face_api.h
